@@ -1,3 +1,7 @@
+2000-05-04  Larry Jones  <larry.jones@sdrc.com>
+
+	* server.c: More error messages.
+
 2000-05-02  Donald Sharp <sharpd@cisco.com>
 	and Larry Jones  <larry.jones@sdrc.com>
 
